Fix launch terminal on OS X